# react-native-my-lib

./: CONTRIBUTING.md  README.md  package.json  react-native-my-lib.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/mylib/: MyLibModule.kt  MyLibPackage.kt
cpp/: react-native-my-lib.cpp  react-native-my-lib.h
example/: package.json
example/android/app/: build.gradle
example/android/app/src/main/java/com/mylib.example/: MainApplication.kt
example/ios/: Podfile
example/ios/MyLibExample/: AppDelegate.mm
example/ios/MyLibExample.xcodeproj/: project.pbxproj
example/ios/MyLibExampleTests/: MyLibExampleTests.m
example/src/: App.tsx
ios/: MyLib.h  MyLib.mm
src/: index.tsx
